# datamaker-sdk

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint.yml  python-publish.yml
datamaker/: client.py  exceptions.py
datamaker/client/: __init__.py  utils.py
datamaker/client/mixins/: annotation.py  dataset.py  hitl.py  integration.py  ml.py
datamaker/core/: registries.py
datamaker/core/storage_providers/: __init__.py  amazon_s3.py  file_system.py
datamaker/plugins/: __init__.py  exports.py  imports.py  neural_networks.py
datamaker/utils/: file.py  logger.py
