[build-system]
requires = [
    'setuptools >= 42',
    'wheel',
    'setuptools_scm[toml]>=6.2'
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.ruff]
select = ['E', 'F', 'Q']
line-length = 120

[tool.ruff.flake8-quotes]
inline-quotes = 'single'

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true
preview = true
