[metadata]
name = datamaker-client
version = 0.1
description = datamaker rest client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.datamaker.io
author = datamaker
author_email = developer@datamaker.io
license = MIT
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    requests==2.26.0
